--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 before-install:
   - chmod +x ./deploy.sh
 
-script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then ./deploy.sh; fi'
+# script:
+#   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then ./deploy.sh; fi'
 
 deploy:
   - provider: elasticbeanstalk
