--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ sudo: require
 language: node_js
 services:
   - docker
-# before-install:
-#   - chmod +x ./deploy.sh
+before-install:
+  - chmod +x ./deploy.sh
 
-# script:
-#   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then ./deploy.sh; fi'
+script:
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then ./deploy.sh; fi'
 
 deploy:
   - provider: elasticbeanstalk
