--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,14 @@ deploy:
     app: "test-deploy-travis"
     env: "TestDeployTravis-env"
     bucket_name: "elasticbeanstalk-eu-west-3-969651468995"
-    access_key_id:
-      secure: $AWS_ACCESS_KEY
-    secret_access_key:
-      secure: $AWS_SECRET_KEY
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
     on:
       branch: master
 
 notifications:
-  email: false
+  email:
+    false
+
+    # secure: $AWS_ACCESS_KEY
+    # secure: $AWS_SECRET_KEY
