--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@types/reactstrap": "^8.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
